--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@ html {
 }
 
 h1 {
-  font-family: "Dosis", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-size: 18px;
   line-height: 23px;
   letter-spacing: 0.25px;
